# est8

./: .flake8  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: test_and_lint.yml
est8/: main.py
est8/backend/: definitions.py  errors.py  house.py  neighbourhood.py  player.py  scoring.py  street.py
est8/frontend/: card.py  deck.py  game.py  input_handler.py  neighbourhood.py  score_displays.py  street.py
flipville/: main.py
flipville/backend/: definitions.py  errors.py  neighbourhood.py  player.py  street.py
flipville/frontend/: card.py  deck.py  game.py  input_handler.py  neighbourhood.py  score_displays.py  street.py
tests/test_backend/: test_definitions.py  test_neighbourhood.py  test_player.py  test_street.py
